# ship-agent

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  logging.conf  pyproject.toml
app/: main.py  middlewares.py  utils.py
app/internal/data/: __init__.py  agents.py  base.py  chat.py  database.py  healthcheck.py  mocks.py  tokens.py  users.py
app/internal/server/: middlewares.py
app/internal/settings/: settings.py
app/routers/: agents.py  chat.py  conversation.py  healthcheck.py  tokens.py  users.py
libs/cli/: README.md  pyproject.toml
libs/cli/src/fastagent_cli/: cli.py
libs/core/: README.md  pyproject.toml
libs/core/src/fastagent_core/: __init__.py  api.py  handlers.py  middlewares.py  server.py  utils.py
libs/core/src/fastagent_core/internal/server/: middlewares.py
libs/core/src/fastagent_core/routers/: agents.py  healtcheck.py
migrations/: 000001_create_user_table.up.sql
