[project]
name = "heypi"
version = "0.1.0"
description = "Make LLM interoperable and following OpenAI API."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.115.3",
  "granian>=1.6.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.0",
  "uvloop>=0.21",
]

[tool.uv]
dev-dependencies = ["granian[reload]>=1.6.1"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "D104"]

pydocstyle.convention = "google"
