[project]
name = "fastagent-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "dspy-ai>=2.5.18",
    "fastapi>=0.115.4",
    "pydantic>=2.9.2",
    "uvicorn>=0.32.0",
    "uvloop>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
